packages/build/tests/error/build/fixtures/exception/plugin.js
module.exports = {
  async onInit() {
    throw new Error('test')
  },
}
